# Sprint-Stuttering-Fix-Skyrim

./: CMakeLists.txt  vcpkg.json
cmake/: version.rc.in
contrib/Config/: SprintStutteringFix.ini
include/: Hooks.h  Settings.h
scripts/: archive_artifacts.py
src/: Hooks.cpp  Main.cpp  Settings.cpp
